@@ -9,7 +9,7 @@ import net.sf.sevenzipjbinding.impl.OutArchiveZipImpl;
 
 /**
  * Enumeration of all supported archive types. <blockquote>
- * 
+ *
  * <table border="1">
  * <tr>
  * <td><b>Format</b></td>
@@ -48,12 +48,6 @@ import net.sf.sevenzipjbinding.impl.OutArchiveZipImpl;
  * <td>{@link #CHM}</td>
  * </tr>
  * <tr align="center">
- * <td>Compound</td>
- * <td>-</td>
- * <td>-</td>
- * <td>-</td>
- * </tr>
- * <tr align="center">
  * <td>Cpio</td>
  * <td>X</td>
  * <td>-</td>
@@ -66,28 +60,10 @@ import net.sf.sevenzipjbinding.impl.OutArchiveZipImpl;
  * <td>{@link #AR}</td>
  * </tr>
  * <tr align="center">
- * <td>Dmg</td>
- * <td>-</td>
- * <td>-</td>
- * <td>-</td>
- * </tr>
- * <tr align="center">
- * <td>Elf</td>
- * <td>-</td>
- * <td>-</td>
- * <td>-</td>
- * </tr>
- * <tr align="center">
  * <td>GZip</td>
  * <td>X</td>
  * <td>X</td>
  * <td>{@link #GZIP}</td>
- * </tr>
- * <tr align="center">
- * <td>Hfs</td>
- * <td>-</td>
- * <td>-</td>
- * <td>-</td>
  * </tr>
  * <tr align="center">
  * <td>Iso</td>
@@ -108,28 +84,10 @@ import net.sf.sevenzipjbinding.impl.OutArchiveZipImpl;
  * <td>{@link #LZMA}</td>
  * </tr>
  * <tr align="center">
- * <td>Macho</td>
- * <td>-</td>
- * <td>-</td>
- * <td>-</td>
- * </tr>
- * <tr align="center">
- * <td>Mub</td>
- * <td>-</td>
- * <td>-</td>
- * <td>-</td>
- * </tr>
- * <tr align="center">
  * <td>Nsis</td>
  * <td>X</td>
  * <td>-</td>
  * <td>{@link #NSIS}</td>
- * </tr>
- * <tr align="center">
- * <td>Pa</td>
- * <td>-</td>
- * <td>-</td>
- * <td>-</td>
  * </tr>
  * <tr align="center">
  * <td>Rar</td>
@@ -150,22 +108,10 @@ import net.sf.sevenzipjbinding.impl.OutArchiveZipImpl;
  * <td>{@link #RPM}</td>
  * </tr>
  * <tr align="center">
- * <td>Split</td>
- * <td>-</td>
- * <td>-</td>
- * <td>-</td>
- * </tr>
- * <tr align="center">
  * <td>Tar</td>
  * <td>X</td>
  * <td>X</td>
  * <td>{@link #TAR}</td>
- * </tr>
- * <tr align="center">
- * <td>Udf</td>
- * <td>X</td>
- * <td>-</td>
- * <td>{@link #UDF}</td>
  * </tr>
  * <tr align="center">
  * <td>Wim</td>
@@ -193,7 +139,7 @@ import net.sf.sevenzipjbinding.impl.OutArchiveZipImpl;
  * </tr>
  * </table>
  * <blockquote> <br>
- * 
+ *
  * @author Boris Brodski
  * @since 1.0
  */
@@ -232,11 +178,6 @@ public enum ArchiveFormat {
      * Iso format.
      */
     ISO("Iso", true),
-
-    /**
-     * Hfs format
-     */
-    HFS("HFS", true),
 
     /**
      * Gzip format
@@ -298,10 +239,11 @@ public enum ArchiveFormat {
      */
     RPM("Rpm", true),
 
-    /**
-     * Udf
-     */
-    UDF("Udf", true),
+    // TODO Uncomment after resolving security problems in 7-zip
+    //    /**
+    //     * Udf
+    //     */
+    //    UDF("Udf", true),
 
     /**
      * Wim
@@ -349,7 +291,7 @@ public enum ArchiveFormat {
 
     /**
      * Return name of the archive method
-     * 
+     *
      * @return name of the archive method
      */
     public String getMethodName() {
@@ -358,7 +300,7 @@ public enum ArchiveFormat {
 
     /**
      * Return whether this archive type supports creation/update operations
-     * 
+     *
      * @return <code>true</code> - creation/update operations are supported,<br>
      *         <code>false</code> - only archive extraction is supported
      */
@@ -368,7 +310,7 @@ public enum ArchiveFormat {
 
     /**
      * Get corresponding implementation class for archive update operations.
-     * 
+     *
      * @return the {@link IOutArchive} implementation class
      */
     public Class<? extends OutArchiveImpl<?>> getOutArchiveImplementation() {
@@ -378,7 +320,7 @@ public enum ArchiveFormat {
     /**
      * Return <code>true</code>, if the archive format is capable of compressing or storing multiple files within the
      * archive.
-     * 
+     *
      * @return <code>true</code> - support multiple files, <code>false</code> support single file or stream
      */
     public boolean supportMultipleFiles() {
@@ -395,7 +337,7 @@ public enum ArchiveFormat {
 
     /**
      * Finds the {@link ArchiveFormat} corresponding to the given out-archive interface.
-     * 
+     *
      * @param outArchiveInterface
      *            out-archive interface
      * @return corresponding out-archive implementation class
