@@ -136,7 +136,6 @@ import net.sf.sevenzipjbinding.junit.multiplefiles.ExtractMultipleFileSevenZipVo
 import net.sf.sevenzipjbinding.junit.multiplefiles.ExtractMultipleFileSevenZipVolumePassTest;
 import net.sf.sevenzipjbinding.junit.multiplefiles.ExtractMultipleFileSevenZipVolumeTest;
 import net.sf.sevenzipjbinding.junit.multiplefiles.ExtractMultipleFileTarTest;
-import net.sf.sevenzipjbinding.junit.multiplefiles.ExtractMultipleFileUdfTest;
 import net.sf.sevenzipjbinding.junit.multiplefiles.ExtractMultipleFileWimTest;
 import net.sf.sevenzipjbinding.junit.multiplefiles.ExtractMultipleFileXarTest;
 import net.sf.sevenzipjbinding.junit.multiplefiles.ExtractMultipleFileZipPassTest;
@@ -187,7 +186,6 @@ import net.sf.sevenzipjbinding.junit.singlefile.ExtractSingleFileSevenZipVolumeP
 import net.sf.sevenzipjbinding.junit.singlefile.ExtractSingleFileSevenZipVolumePassTest;
 import net.sf.sevenzipjbinding.junit.singlefile.ExtractSingleFileSevenZipVolumeTest;
 import net.sf.sevenzipjbinding.junit.singlefile.ExtractSingleFileTarTest;
-import net.sf.sevenzipjbinding.junit.singlefile.ExtractSingleFileUdfTest;
 import net.sf.sevenzipjbinding.junit.singlefile.ExtractSingleFileWimTest;
 import net.sf.sevenzipjbinding.junit.singlefile.ExtractSingleFileXarTest;
 import net.sf.sevenzipjbinding.junit.singlefile.ExtractSingleFileZTest;
@@ -300,7 +298,8 @@ public class AllTestSuite extends TestSuite {
             ExtractMultipleFileSevenZipVolumePassTest.class, //
             ExtractMultipleFileSevenZipVolumeTest.class, //
             ExtractMultipleFileTarTest.class, //
-            ExtractMultipleFileUdfTest.class, //
+            // TODO Uncomment after resolving security problems in 7-zip
+            //            ExtractMultipleFileUdfTest.class, //
             ExtractMultipleFileWimTest.class, //
             ExtractMultipleFileXarTest.class, //
             ExtractMultipleFileZipPassTest.class, //
@@ -353,7 +352,8 @@ public class AllTestSuite extends TestSuite {
             ExtractSingleFileSevenZipVolumePassTest.class, //
             ExtractSingleFileSevenZipVolumeTest.class, //
             ExtractSingleFileTarTest.class, //
-            ExtractSingleFileUdfTest.class, //
+            // TODO Uncomment after resolving security problems in 7-zip
+            //            ExtractSingleFileUdfTest.class, //
             ExtractSingleFileWimTest.class, //
             ExtractSingleFileXarTest.class, //
             ExtractSingleFileZTest.class, //
