@@ -14,6 +14,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.util.Random;
 
+import org.junit.Test;
+
 import net.sf.sevenzipjbinding.ArchiveFormat;
 import net.sf.sevenzipjbinding.ExtractOperationResult;
 import net.sf.sevenzipjbinding.IInArchive;
@@ -21,8 +23,6 @@ import net.sf.sevenzipjbinding.ISequentialOutStream;
 import net.sf.sevenzipjbinding.PropID;
 import net.sf.sevenzipjbinding.SevenZipException;
 import net.sf.sevenzipjbinding.junit.ExtractFileAbstractTest;
-
-import org.junit.Test;
 
 /**
  * This test tests extraction of archives with a single file. Test data: <code>testdata/simple</code>.<br>
@@ -259,8 +259,9 @@ public abstract class ExtractSingleFileAbstractTest extends ExtractFileAbstractT
 			outputStream.checkAndCloseInputFile();
 			outputStream = null;
 
+            // TODO Uncomment after resolving security problems in 7-zip
             if (archiveFormat != ArchiveFormat.CAB && archiveFormat != ArchiveFormat.CHM
-                    && archiveFormat != ArchiveFormat.UDF) {
+            /* && archiveFormat != ArchiveFormat.UDF */) {
                 checkPropertyPackedSize(inArchive, index, expectedFilename);
             }
 			checkPropertyIsEncrypted(inArchive, index, expectedFilename);
