@@ -6,7 +6,8 @@ Release - 15.09-2.01beta (Release candidate, cross-platform, based on zip/p7zip 
     * Bind 7-Zip 15.09 (beta)
         - DEB archive renamed to AR supporting archive extension: .ar, .a, .deb, .lib 
         - PropID.LINK renamed to PropID.SYM_LINK
-        
+    * Temporary remove support for HFS and UDF due to the security gap in
+      7-zip
     * Full RAR5 extraction support (format name: ArchiveFormat.RAR5)
         - password protected archives 
         - archives with encrypted headers
@@ -23,7 +24,7 @@ Release - 15.09-2.01beta (Release candidate, cross-platform, based on zip/p7zip 
     
     * Improve archive type auto-detection (algorithm + performance)
 
-    * Bugfix: Bug #Xxx (7z-archive in Tar)
+    * Bugfix: Bug #21 (7z-archive in Tar)
 
     * Bugfix: Bug #18 (null as password causes JVM crash)
 
